--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   graph-node:
-    image: graphprotocol/graph-node
+    # image: graphprotocol/graph-node
+    build: .
     ports:
       - '8000:8000'
       - '8001:8001'
@@ -17,7 +18,7 @@ services:
       postgres_pass: let-me-in
       postgres_db: graph-node
       ipfs: 'ipfs:5001'
-      ethereum: 'mainnet:http://host.docker.internal:8545'
+      ethereum: 'mainnet:https://tnode.kswap.finance'
       RUST_LOG: info
   ipfs:
     image: ipfs/go-ipfs:v0.4.23
