--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 services:
   graph-node:
-    # image: graphprotocol/graph-node
-    build: .
+    image: graph-node:latest
     ports:
       - '8000:8000'
       - '8001:8001'
