--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       postgres_pass: let-me-in
       postgres_db: graph-node
       ipfs: 'ipfs:5001'
-      ethereum: 'mainnet:https://tnode.kswap.finance'
+      ethereum: 'mainnet:https://exchaintest.okexcn.com'
       RUST_LOG: info
   ipfs:
     image: ipfs/go-ipfs:v0.4.23
